// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MDropdown should render correctly 1`] = `
<div class="m-dropdown" style="width: 100%; max-width: 288px;">
  <m-input-style label-for="mDropdown-uuid" empty="true" cursor-pointer="true" width="100%" tag-style="default">
    <!----> <input type="text" id="mDropdown-uuid" aria-haspopup="true" aria-controls="mDropdown-uuid-controls" readonly="readonly" class="m-dropdown__input">
    <!---->
    <div slot="suffix" class="m-dropdown__arrow">
      <m-icon name="m-svg__arrow-head-filled--down" size="16px" class="m-dropdown__arrow__icon">
        <m-i18n k="m-dropdown:open"></m-i18n>
      </m-icon>
    </div>
  </m-input-style>
  <m-validation-message class="m-dropdown__validation-message"></m-validation-message>
  <m-popup width="100%" placement="bottom-start" enter="function () { [native code] }" leave="function () { [native code] }" close-on-backdrop="true" preload="true" open-trigger="mousedown">
    <!---->
    <ul id="mDropdown-uuid-controls" aria-labelledby="mDropdown-uuid" aria-live="polite" class="m-dropdown__list">
      <m-dropdown-item readonly="true">No data</m-dropdown-item>
      <!---->
    </ul>
    <!---->
  </m-popup>
</div>
`;

exports[`MDropdown should render correctly when placeholder is set 1`] = `
<div class="m-dropdown" style="width: 100%; max-width: 288px;">
  <m-input-style label-for="mDropdown-uuid" empty="true" cursor-pointer="true" width="100%" tag-style="default">
    <!----> <input type="text" id="mDropdown-uuid" aria-haspopup="true" aria-controls="mDropdown-uuid-controls" readonly="readonly" placeholder="placeholder test" class="m-dropdown__input">
    <!---->
    <div slot="suffix" class="m-dropdown__arrow">
      <m-icon name="m-svg__arrow-head-filled--down" size="16px" class="m-dropdown__arrow__icon">
        <m-i18n k="m-dropdown:open"></m-i18n>
      </m-icon>
    </div>
  </m-input-style>
  <m-validation-message class="m-dropdown__validation-message"></m-validation-message>
  <m-popup width="100%" placement="bottom-start" enter="function () { [native code] }" leave="function () { [native code] }" close-on-backdrop="true" preload="true" open-trigger="mousedown">
    <!---->
    <ul id="mDropdown-uuid-controls" aria-labelledby="mDropdown-uuid" aria-live="polite" class="m-dropdown__list">
      <m-dropdown-item readonly="true">No data</m-dropdown-item>
      <!---->
    </ul>
    <!---->
  </m-popup>
</div>
`;
